# databricks-ai-workshops

./: .gitignore  README.md
advanced/: .databricksignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  WORKSHOP_INSTRUCTIONS.md  WORKSHOP_INSTRUCTIONS_revised.md  agent_evaluation.ipynb  app.yaml  databricks.yml  pyproject.toml  workshop_setup.py
advanced/.claude/skills/add-tools/: skill.md
advanced/.claude/skills/agent-memory/: skill.md
advanced/.claude/skills/deploy/: skill.md
advanced/.claude/skills/discover-tools/: skill.md
advanced/.claude/skills/lakebase-setup/: skill.md
advanced/.claude/skills/migrate-from-model-serving/: skill.md
advanced/.claude/skills/modify-agent/: skill.md
advanced/.claude/skills/quickstart/: skill.md
advanced/.claude/skills/run-locally/: skill.md
advanced/.streamlit/: config.toml
advanced/agent_server/: agent.py  agent_mcp.py  evaluate_agent.py  evaluate_agent_chat.py  evaluate_agent_multi_turn.py  evaluate_agent_multi_turn_advanced.py  ja_evaluate_agent.py  ja_evaluate_agent_advanced.py  start_server.py  utils.py  utils_memory.py
advanced/docs/: lakebase_memory_explained.md
advanced/e2e-chatbot-app-next/: README.md  package-lock.json
advanced/e2e-chatbot-app-next/client/src/components/: app-sidebar.tsx  chat-header.tsx  greeting.tsx  message-actions.tsx  message-editor.tsx  (+10 more)
advanced/e2e-chatbot-app-next/e2e-chatbot-app-next/: README.md
advanced/scripts/: cleanup.py  grant_sp_permissions.py  grant_team_access.py  ja_register_prompt.py  quickstart.py  quickstart_core.py  quickstart_gui.py
(+28 files in other folders)
