[project]
name = "agent-server"
version = "0.1.0"
description = "MLflow-compatible agent server with FastAPI"
readme = "README.md"
authors = [
    { name = "Agent Developer", email = "developer@example.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "databricks-langchain[memory]>=0.17.0",
    "databricks-sdk>=0.79.0",
    "databricks-agents>=1.9.3",
    "mlflow>=3.10.0",
    "langgraph>=1.0.9",
    "langchain-mcp-adapters>=0.2.1",
    "python-dotenv>=1.2.1",
    "uuid-utils>=0.9.0",
    "streamlit>=1.45.0",
]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent_server*", "scripts*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]


[project.scripts]
quickstart = "scripts.quickstart:main"
start-app = "scripts.start_app:main"
start-server = "agent_server.start_server:main"
agent-evaluate = "agent_server.evaluate_agent_multi_turn:evaluate"
agent-evaluate-advanced = "agent_server.evaluate_agent_multi_turn_advanced:evaluate"
agent-evaluate-chat = "agent_server.evaluate_agent_chat:evaluate"
discover-tools = "scripts.discover_tools:main"
register-prompt = "scripts.register_prompt:main"
cleanup = "scripts.cleanup:main"
grant-team-access = "scripts.grant_team_access:main"
grant-sp-permissions = "scripts.grant_sp_permissions:main"
